Object.matrix_world does not account for bone parents #38016

Closed
opened 2014-01-01 17:41:29 +01:00 by Tom Edwards · 8 comments

System Information
Win7 x64

Blender Version
Broken: 2.66 (r55078)
Worked: unknown

Short description of error

When setting the value of matrix_world on an object with a bone parent, the matrix of the bone parent is not taken into account. This leads to the object being positioned relative to the tail of its parent bone instead of the world.

Exact steps for others to reproduce the error

The object will change position, even though the script is only performing o.matrix_world = o.matrix_world.

**System Information** Win7 x64 **Blender Version** Broken: 2.66 (r55078) Worked: unknown **Short description of error** When setting the value of `matrix_world` on an object with a bone parent, the matrix of the bone parent is not taken into account. This leads to the object being positioned relative to the tail of its parent bone instead of the world. **Exact steps for others to reproduce the error** - Open [bone_parent_matrix.blend](https://archive.blender.org/developer/F60157/bone_parent_matrix.blend) - Run the script The object will change position, even though the script is only performing `o.matrix_world = o.matrix_world`.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Campbell Barton was assigned by Tom Edwards 2014-01-01 17:41:29 +01:00
Author

Added subscriber: @artfunkel

Added subscriber: @artfunkel

This issue was referenced by blender/blender-addons-contrib@a0dbee6e93

This issue was referenced by blender/blender-addons-contrib@a0dbee6e933bfb5d4722d33367fd8290cd301b4c

This issue was referenced by blender/blender@a0dbee6e93

This issue was referenced by blender/blender@a0dbee6e933bfb5d4722d33367fd8290cd301b4c

Added subscriber: @brecht

Added subscriber: @brecht

Fixed now, thanks for the report.

Fixed now, thanks for the report.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit blender/blender@a0dbee6e93.

Closed by commit blender/blender@a0dbee6e93.
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#38016
No description provided.