Fix T38016: setting Object.matrix_world does not take bone parents into account.